Added base code for audio/mic streaming.